--- a/PetStoreWebsite/styles.css
+++ b/PetStoreWebsite/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #5e3fcf;
+    background-color: #4CAF50;
     padding: 20px;
     color: white;
 }
@@ -42,7 +42,7 @@ nav a {
 }
 
 button {
-    background-color: #3812c4;
+    background-color: #008CBA;
     color: white;
     padding: 10px;
     border: none;
@@ -50,5 +50,5 @@ button {
 }
 
 button:hover {
-    background-color: #1310c9;
+    background-color: #005f7a;
 }
